reporting-service/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-service-prod-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-prod-service
  template:
    metadata:
      labels:
        app: reporting-prod-service
    spec:
      containers:
        - name: reporting-prod-service
          image: reporting-service-dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3006
          workingDir: /app   
          command: ["npm", "run", "start" ]
