reporting-service/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-prod-service
spec:
  selector:
    app: reporting-prod-service
  ports:
    - port: 150
      targetPort: 3006
