reporting-service/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporting-prod-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: reporting.prod.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reporting-prod-service
              port: 
                number: 150
